--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
     </div>
 
    <div class="imagg">
-     <div class="imge  "><a target="_blank" href=""><img src="images/rockk.png" alt="GSG JS PROJ"></a></div>
+     <div class="imge"><a target="_blank" href="https://kareem727.github.io/JS-Project-GSG/"><img src="images/rockk.png" alt="GSG JS PROJ"></a></div>
     <div class="imge"><a target="_blank" href="https://sahala.herokuapp.com/"><img src="images/sahala.jpg"alt="img" ></a></div>
     <div class="imge"><a target="_blank" href="https://university21.herokuapp.com/"><img src="images/university.png"alt="img"></a></div>
     <div class="imge"><a target="_blank" href="https://popcorn21.herokuapp.com/"><img src="images/popcornMovies.png"alt="img"></a></div>
